<resources>
    <string name="app_name">Ecommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="home_fragment">Home </string>
    <string name="cart_fragment">Cart </string>
    <string name="profile_fragment">Profile</string>

    <string name="discover">Discover\nour new items</string>
    <string name="email_invalid">Email Invalid</string>
    <string name="invalid_password">Password Invalid</string>
    <string name="don_t_have">Don`t have an account?</string>
    <string name="or_sign_in">Or Sign In With</string>
    <string name="default_web_client_id">Default Web Client Id</string>


    <string name="location">Address</string>
    <string name="your_profile">Your Profile</string>
    <string name="notif">Notification</string>
    <string name="account_setting">Account Setting</string>
    <string name="other_settings">Other Setting</string>
    <string name="help_center">Help Center</string>
    <string name="item_add">Item added to cart</string>
    <string name="security">Account Security</string>


</resources>