<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ProfileFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Profile"
            android:textSize="20sp"
            app:fontFamily="@font/poppins_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/exitButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="exit"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_white"
            android:outlineSpotShadowColor="@color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView"
            tools:layout_editor_absoluteX="-16dp" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="Profile picture"
            android:src="@drawable/tass"
            android:layout_marginTop="10dp"
            app:civ_border_color="@android:color/darker_gray"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tvProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Fauzan"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/imgProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/iconEdit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_edit_24"
            android:background="@drawable/bg_rounded"
            android:padding="8dp"
            android:contentDescription="Edit profile"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/imgProfile"
            app:layout_constraintEnd_toEndOf="@id/imgProfile"
            android:layout_marginBottom="-8dp"
            android:layout_marginEnd="-8dp" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_setting"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="@dimen/spacing_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pengaturan_lainnya">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/tv_pusatBantuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/statelist_bg"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_help_center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@string/help_center"
                        android:drawableEnd="@drawable/ic_cevhron_right"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#E5E5E5"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/tv_kebijakanPrivasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/statelist_bg"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_cliboard" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="Kebijakan Privasi"
                        android:drawableEnd="@drawable/ic_cevhron_right"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#E5E5E5"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/beriRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/statelist_bg"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_outline_star" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="Beri Nilai"
                        android:gravity="center_vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="v 1.0"
                        android:drawablePadding="10dp"
                        app:drawableEndCompat="@drawable/ic_cevhron_right"
                        android:gravity="center_vertical" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#E5E5E5"
                    android:visibility="visible" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_pengaturan_lainnya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_settings"
            android:layout_marginTop="40dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/card"
            app:layout_constraintTop_toBottomOf="@+id/card" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/statelist_bg"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_notif" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@string/notif"
                        android:gravity="center_vertical"
                        app:drawableEndCompat="@drawable/ic_cevhron_right" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#E5E5E5"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/profilSaya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/statelist_bg"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_profile" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="@integer/material_motion_duration_long_1"
                        android:gravity="center_vertical"
                        android:drawableEnd="@drawable/ic_cevhron_right"
                        android:text="@string/your_profile" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#E5E5E5"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/statelist_bg"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_location" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:drawableEnd="@drawable/ic_cevhron_right"
                        android:gravity="center_vertical"
                        android:text="@string/location"
                        tools:ignore="UseCompatTextViewDrawableXml" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#E5E5E5"
                    android:visibility="visible" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>

